--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mode">
         <label class="tohome">
-            <a href="portfolio.html"><img class="backicon" src="img/back.png" alt="back_icon"></a>
+            <a href="index.html"><img class="backicon" src="img/back.png" alt="back_icon"></a>
         </label>
         <label id="night1" class="daybtn" onclick="daymode()">
             <img style="width: 50px; cursor: pointer; border-radius: 12px; background-color: white;" src="img/day.png" alt="daymode_icon"></label>
